test/e2e/fixtures/chunked-length-allow/manifests.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: target
spec:
  replicas: 1
  selector:
    matchLabels:
      app: target
  template:
    metadata:
      labels:
        app: target
    spec:
      containers:
        - name: kat-server
          image: (env('KAT_SERVER_IMAGE'))
          imagePullPolicy: IfNotPresent
          command: ["/work/kat-server"]
          env:
            - name: BACKEND
              value: target
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: target
spec:
  selector:
    app: target
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: getambassador.io/v3alpha1
kind: Module
metadata:
  name: ambassador
spec:
  ambassador_id: [(env('SLOT'))]
  config:
    allow_chunked_length: true
---
apiVersion: getambassador.io/v3alpha1
kind: Mapping
metadata:
  name: foo
spec:
  ambassador_id: [(env('SLOT'))]
  hostname: "*"
  prefix: /foo/
  service: target:8080
