test/e2e/fixtures/chunked-length-allow/queries.json
[
  {"url": "/foo/", "method": "GET"},
  {"url": "/ambassador/v0/diag/", "method": "GET"}
]
